# terminalbrot

./: CHANGELOG.md  LICENSE  README.md  terminalbrot.cabal
app/: Camera.hs  Camera.hs~  Main.hs  Main.hs~  Mandelbrot.hs  Mandelbrot.hs~
