cabal-version:      3.0
name:               terminalbrot
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Marucha, Jan
maintainer:         jan.marucha@intel.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable terminalbrot
    import:           warnings
    main-is:          Main.hs
    other-modules:    Camera, Mandelbrot
    -- other-extensions:
    build-depends:    base ^>=4.18.3.0,
                      ansi-terminal,
                      colour,
                      parallel,
                      random
    hs-source-dirs:   app
    default-language: Haskell2010
